Make small change to project hints

--- a/projectapp/templates/projectapp/hint.html
+++ b/projectapp/templates/projectapp/hint.html
@@ -3,10 +3,7 @@
 {% block title %}Hint{% endblock %}
 {% block content %}
 <h1 style="text-align: center;">Welcome to Project Management System</h1>
-<p>Thank you for your interest in this Project Management System. Of course, you can register and take a tour.<br>Or your could <a href="{% url 'login' %}">login</a> using:</p>
-<h2>Username: guest
-<br>
-Password: guest_password</h2>
+<p>Thank you for your interest in this Project Management System.</p>
 <hr style ="border: 2px solid #2166ac;">
 <h1 style="text-align: center;">Project Management System (PMS) App</h1>
 <h2>Purpose</h2>
